--- a/erp-cortinas/backend/package.json
+++ b/erp-cortinas/backend/package.json
@@ -14,7 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
