--- a/erp-cortinas/backend/package.json
+++ b/erp-cortinas/backend/package.json
@@ -9,6 +9,9 @@
     "prisma:migrate": "prisma migrate dev --name init --preview-feature",
     "seed": "node prisma/seed.js"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "dependencies": {
     "@prisma/client": "^5.0.0",
     "cors": "^2.8.5",
