--- a/erp-cortinas/backend/package.json
+++ b/erp-cortinas/backend/package.json
@@ -14,12 +14,21 @@
   },
   "dependencies": {
     "@prisma/client": "^5.0.0",
+    "axios": "^1.11.0",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.0",
+    "ejs": "^3.1.10",
     "express": "^4.18.2",
+    "handlebars": "^4.7.8",
+    "libphonenumber-js": "^1.12.13",
+    "nodemailer": "^6.10.1",
     "pg": "^8.10.0",
+    "puppeteer": "^24.17.0",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
